# shellsafety

./: .github_deploy  .gitignore  .prepare_deploy  CHANGELOG.md  NOTICE  README.md  ShellCheck.cabal  ShellSafety.cabal  cabal.project  quickrun  quicktest  shellcheck-safety.hs  shellcheck.hs  shellsafety.hs  striptests
.github/workflows/: build.yml  builders.yml
builders/darwin.aarch64/: Dockerfile  build  tag
builders/darwin.x86_64/: Dockerfile  build  tag
builders/linux.aarch64/: Dockerfile  build  tag
builders/linux.x86_64/: Dockerfile  build  tag
contrib/claude-code/: interactive-hook.sh  safety-check.sh
src/ShellCheck/: Analyzer.hs  Checker.hs  Interface.hs  Parser.hs
src/ShellCheck/Checks/: Safety.hs
src/ShellCheck/Safety/: Analysis.hs  Effects.hs  Policy.hs
src/ShellSafety/: AST.hs  ASTLib.hs  Analysis.hs  Checker.hs  Effects.hs  Interface.hs  Parser.hs  Policy.hs  Prelude.hs  Regex.hs
test/: check_release  shellcheck.hs  shellsafety.hs
