Name:             ShellSafety
Version:          0.11.0
Synopsis:         Safety gate for AI agent shell command execution
License:          GPL-3
License-file:     LICENSE
Category:         Static Analysis
Author:           Vidar Holen
Maintainer:       vidar@vidarholen.net
Homepage:         https://www.shellcheck.net/
Build-Type:       Simple
Cabal-Version:    1.18
Bug-reports:      https://github.com/koalaman/shellcheck/issues
Description:
  The goals of ShellCheck are:
  .
  * To point out and clarify typical beginner's syntax issues,
    that causes a shell to give cryptic error messages.
  .
  * To point out and clarify typical intermediate level semantic problems,
    that causes a shell to behave strangely and counter-intuitively.
  .
  * To point out subtle caveats, corner cases and pitfalls, that may cause an
    advanced user's otherwise working script to fail under future circumstances.

tested-with: GHC == 8.0, GHC == 8.10, GHC == 9.0.1, GHC == 9.4.7, GHC == 9.6.6

Extra-Doc-Files:
    README.md
    CHANGELOG.md
Extra-Source-Files:
    -- documentation
    shellcheck.1.md
    -- A script to build the man page using pandoc
    manpage
    -- convenience script for stripping tests
    striptests
    -- tests
    test/shellsafety.hs

source-repository head
    type: git
    location: https://github.com/koalaman/shellcheck.git

library
    hs-source-dirs: src
    if impl(ghc < 8.0)
      build-depends:
        semigroups
    build-depends:
      aeson                >= 1.4.0 && < 2.3,
      base                 >= 4.8.0.0 && < 5,
      bytestring           >= 0.10.6 && < 0.13,
      containers           >= 0.5.6 && < 0.9,
      deepseq              >= 1.4.2 && < 1.6,
      mtl                  >= 2.2.2 && < 2.4,
      parsec               >= 3.1.14 && < 3.2,
      QuickCheck           >= 2.14.2 && < 2.17,
      regex-tdfa           >= 1.2.0 && < 1.4,
      transformers         >= 0.4.2 && < 0.7,
      directory            >= 1.2.3 && < 1.4,
      process
    exposed-modules:
      ShellSafety.AST
      ShellSafety.ASTLib
      ShellSafety.Analysis
      ShellSafety.Checker
      ShellSafety.Effects
      ShellSafety.Interface
      ShellSafety.Parser
      ShellSafety.Policy
      ShellSafety.Prelude
      ShellSafety.Regex
    other-modules:
      Paths_ShellSafety
    default-language: Haskell2010

executable shellsafety
    build-depends:
      aeson,
      base,
      bytestring,
      directory,
      text,
      time,
      ShellSafety
    default-language: Haskell2010
    main-is: shellsafety.hs

test-suite test-shellsafety
    type: exitcode-stdio-1.0
    build-depends:
      aeson,
      base,
      bytestring,
      containers,
      deepseq,
      directory,
      mtl,
      parsec,
      QuickCheck,
      regex-tdfa,
      transformers,
      ShellSafety
    default-language: Haskell2010
    main-is: test/shellsafety.hs
